--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Montserrat&family=Shadows+Into+Light&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Montserrat&family=Oswald&family=Shadows+Into+Light&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Montserrat&family=Nunito+Sans&family=Oswald&family=Shadows+Into+Light&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -84,6 +89,76 @@
     </section>
 
 
+    <section class="section-3">
+        <div class="left-sec">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="right-sec">
+            <h2>Develop <br> Without Limits</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
+                dissentias et cum.</p>
+            <a href="">Read the Documentation</a>
+        </div>
+    </section>
+
+
+    <section class="section-4">
+        <div class="right-sec">
+            <h2>Know our
+
+                Global Community</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
+                dissentias et cum.</p>
+            <a href="">Read the Documentation</a>
+        </div>
+
+        <div class="left-sec">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+
+    </section>
+
+
+
+    <section class="section-5">
+
+        <h1>Build Your Own <span>Neptune Application</span> </h1>
+
+        <div class="neptune">
+            <div class="left-sec">
+                <img src="images/batch-5.png" alt="">
+            </div>
+            <div class="right-sec">
+
+                <p><span>Neptune by Programming Hero Apps only for those students whome are doing Complete Web
+                        Development
+                        with
+                        Jhankar Mahbub.</span> <br> <br>
+
+                    if you want to enjoy this app you will must registrasion this course.
+
+                    The basic features of this app are:
+                    You can login.
+                    The video can be seen.
+                    Video can be saved & viewed offline.
+
+                </p>
+                <a href="">Download Neptune</a>
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <footer class="last-part">
+        <h3>Mission <span>2022</span></h3>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 
 </body>
 
