--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 
             <p>The main focus of 2022 is being a web developer.In Sha Allah. Allah will help me to being a web
-                developer, And i will try my level bet. And In Sha Allah i will not give up. Please everyone pray for me
-                for my shining furtre, </p>
+                developer, And i will try my level best. And In Sha Allah i will not give up. Please everyone pray for
+                me
+                for my shining furtre. </p>
 
             <a href="">Explore Now</a>
             <p>Scroll down to explore more about us</p>
@@ -61,28 +62,22 @@
             <div class="card-1">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h3>Mission</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>Our mission is to ensure the best relationship with our clients, both during and after their goals
+                    have been met. </p>
             </div>
 
             <div class="card-1 card-bg-2">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h3>Vision</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>We believe every day is an opportunity to further perfect our strategy and spur you on to achieve
+                    your organizational goals.</p>
             </div>
 
             <div class="card-1 card-bg-3">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h3>Gaols</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>Providing quality content on your website, regularly adding new information, establishing trust. you
+                    are our first priority</p>
             </div>
 
         </div>
@@ -95,10 +90,9 @@
         </div>
         <div class="right-sec">
             <h2>Develop <br> Without Limits</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
-                dissentias et cum.</p>
+            <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
+                success—that, and our shared commitment to developing and strengthening the afterschool profession. Your
+                team can confidently train and support youth-facing professionals. </p>
             <a href="">Read the Documentation</a>
         </div>
     </section>
@@ -109,10 +103,9 @@
             <h2>Know our
 
                 Global Community</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren
-                dissentias et cum.</p>
+            <p>Global Communities delivers essential solutions to complex challenges from the intersection of
+                humanitarian assistance, sustainable development and financial inclusion.Our support for communities at
+                the forefront of their own development includes bringing together local leaders.</p>
             <a href="">Read the Documentation</a>
         </div>
 
